# larg4

./: CMakeLists.txt
fcl/: testlarg4.fcl
larg4/: CMakeLists.txt
larg4/Analysis/: CMakeLists.txt  CheckAuxDetHit_module.cc  CheckAuxDetHit_module.h  CheckMCParticle_module.cc  CheckMCParticle_module.h  CheckSimEnergyDeposit_module.cc  CheckSimEnergyDeposit_module.h
larg4/Core/: CMakeLists.txt  larg4Main_module.cc
larg4/Services/: AuxDetSD.cc  AuxDetSD.h  CMakeLists.txt  LArG4Detector_service.cc  LArG4Detector_service.h  SimEnergyDepositSD.cc
larg4/lists/: CMakeLists.txt  MyQGSP_BERT_HP.cc  MyQGSP_BERT_HP.hh
larg4/lists/include/: MyQGSP_BERT_HP.hh  MyQGSP_BERT_HP.icc
larg4/pluginActions/: CMakeLists.txt  MCTruthEventAction_service.cc  MCTruthEventAction_service.h  ParticleListAction_service.cc  ParticleListAction_service.h
ups/: product_deps
